<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="@string/settings_connection_title">
        <CheckBoxPreference
            android:key="default_openhab_demomode"
            android:title="@string/settings_openhab_demomode"
            android:summary="@string/settings_openhab_demomode_summary"
            android:defaultValue="true"
            android:disableDependentsState="true"
            />
        <EditTextPreference
            android:key="default_openhab_url"
            android:title="@string/settings_openhab_url"
            android:summary="@string/settings_openhab_url_summary"
            android:defaultValue=""
            android:dependency="default_openhab_demomode"
            />
        <EditTextPreference
            android:key="default_openhab_alturl"
            android:title="@string/settings_openhab_alturl"
            android:summary="@string/settings_openhab_alturl_summary"
            android:defaultValue=""
            android:dependency="default_openhab_demomode"
            />
        <EditTextPreference
            android:key="default_openhab_username"
            android:title="@string/settings_openhab_username"
            android:summary="@string/settings_openhab_username_summary"
            android:defaultValue=""
            android:dependency="default_openhab_alturl"
            />
        <EditTextPreference
            android:key="default_openhab_password"
            android:title="@string/settings_openhab_password"
            android:inputType="textPassword"
            android:summary="@string/settings_openhab_password_summary"
            android:defaultValue=""
            android:dependency="default_openhab_alturl"
            />

        <PreferenceScreen android:key="button_voicemail_setting_key"
            android:title="@string/settings_security_title"
            android:persistent="false">
            <CheckBoxPreference android:key="default_openhab_sslcert" android:title="@string/settings_openhab_sslcert" android:summary="@string/settings_openhab_sslcert_summary" android:defaultValue="false" />
            <CheckBoxPreference android:key="default_openhab_sslhost" android:title="@string/settings_openhab_sslhost" android:summary="@string/settings_openhab_sslhost_summary" android:defaultValue="true" />
        </PreferenceScreen>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_screen_title">
        <ListPreference android:key="default_openhab_theme" android:title="@string/settings_openhab_theme" android:defaultValue="dark" android:entries="@array/themeArray" android:entryValues="@array/themeValues" />
        <CheckBoxPreference android:key="default_openhab_screentimeroff" android:title="@string/settings_openhab_screentimeroff" android:summary="@string/settings_openhab_screentimeroff_summary" android:defaultValue="false" />
        <CheckBoxPreference android:key="default_openhab_fullscreen" android:title="@string/settings_openhab_fullscreen" android:summary="@string/settings_openhab_fullscreen_summary" android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory>
        <Preference android:id="@+id/mainmenu_openhab_clearcache"
            android:title="@string/mainmenu_openhab_clearcache"
            android:key="mainmenu_openhab_clearcache" />
    </PreferenceCategory>

    <EditTextPreference android:key="default_openhab_appversion" android:title="@string/settings_openhab_appversion" android:persistent="false" android:enabled="false" android:shouldDisableView="false"/>
</PreferenceScreen>
