<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/mainmenu_voice_recognition"
        android:icon="@drawable/ic_mic_black_24dp"
        android:orderInCategory="100"
        android:title="@string/mainmenu_openhab_voice_recognition"
        app:showAsAction="always" />
    <item
        android:id="@+id/mainmenu_openhab_writetag"
        android:orderInCategory="101"
        android:title="@string/mainmenu_openhab_writetag"
        app:showAsAction="never" />
    <item
        android:id="@+id/mainmenu_openhab_selectsitemap"
        android:orderInCategory="102"
        android:title="@string/mainmenu_openhab_selectsitemap"
        app:showAsAction="never" />
    <item
        android:id="@+id/mainmenu_openhab_clearcache"
        android:orderInCategory="103"
        android:title="@string/mainmenu_openhab_clearcache"
        app:showAsAction="never" />
    <item
        android:id="@+id/mainmenu_openhab_preferences"
        android:orderInCategory="104"
        android:title="@string/mainmenu_openhab_preferences"
        app:showAsAction="never" />
</menu>
